--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Vibes Digital Media | SEO & SMO Growth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vibes-site</title>
   </head>
-  <body>
+  <body class="bg-[#020817]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
