--- a/index.html
+++ b/index.html
@@ -2,11 +2,136 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Vibes Digital Media | SEO & SMO Growth</title>
+
+    <!-- ===========================
+         CORE SEO TAGS
+    ============================ -->
+    <title>Vibes Digital Media | Digital Marketing Agency for SEO & Social Media</title>
+
+    <meta
+      name="description"
+      content="Vibes Digital Media is a results-driven digital marketing agency offering SEO services, social media management, lead generation campaigns, and high-converting web design for brands across the U.S., Europe, and Africa."
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://www.vibesdigitalmedia.com/" />
+
+    <!-- ===========================
+         FAVICONS & APP ICONS
+         (Update href paths to match your actual files)
+    ============================ -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/icons/favicon-16x16.png"
+    />
+    <!-- Optional: Web App Manifest if you have one -->
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
+
+    <!-- ===========================
+         OPEN GRAPH (SOCIAL SHARING)
+         (Use your real OG image from Gemini)
+    ============================ -->
+    <meta
+      property="og:title"
+      content="Vibes Digital Media — Your Digital Marketing Agency"
+    />
+    <meta
+      property="og:description"
+      content="SEO, social media management, lead generation and web design that turn clicks into clients."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.vibesdigitalmedia.com/" />
+    <meta
+      property="og:image"
+      content="https://www.vibesdigitalmedia.com/images/og-image.png"
+    />
+
+    <!-- ===========================
+         TWITTER CARD
+    ============================ -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Vibes Digital Media — Your Digital Marketing Agency"
+    />
+    <meta
+      name="twitter:description"
+      content="Vibes Digital Media provides SEO, social media management, web design, and lead generation campaigns designed to grow your business."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.vibesdigitalmedia.com/images/og-image.png"
+    />
+
+    <!-- ===========================
+         STRUCTURED DATA (JSON-LD)
+         Update logo URL to your schema logo file.
+    ============================ -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Vibes Digital Media",
+        "url": "https://www.vibesdigitalmedia.com",
+        "logo": "https://www.vibesdigitalmedia.com/images/vibes-logo-schema.png",
+        "description": "Vibes Digital Media is a digital marketing agency specializing in SEO, social media management, web design, and lead generation marketing.",
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "contactType": "customer support",
+            "email": "support@vibesdigitalmedia.com",
+            "telephone": "+1-346-546-6197",
+            "areaServed": ["US", "EU", "NG", "ZA"],
+            "availableLanguage": ["en"]
+          }
+        ],
+        "sameAs": [
+          "https://www.linkedin.com/company/vibes-digital-media",
+          "https://www.facebook.com/",
+          "https://www.instagram.com/"
+        ]
+      }
+    </script>
+
+    <!-- (Optional) You can add WebSite JSON-LD too later if you want -->
+    <!-- <script type="application/ld+json"> ... </script> -->
   </head>
+
   <body class="bg-[#020817]">
+    <!-- React root -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- ===========================
+         LINKEDIN FOLLOW BUTTON
+         (Non-React widget version)
+    ============================ -->
+    <div id="linkedin-follow" style="margin: 2rem auto; text-align: center;">
+      <script src="https://platform.linkedin.com/in.js" type="text/javascript">
+        lang: en_US
+      </script>
+
+      <script
+        type="IN/FollowCompany"
+        data-id="109896183"
+        data-counter="right"
+      ></script>
+    </div>
+
+    <!-- React entry (defer for better performance) -->
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
