--- a/index.html
+++ b/index.html
@@ -84,55 +84,36 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
-          {
-            "@type": "Question",
-            "name": "What types of businesses does Vibes Digital Media work with?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Vibes Digital Media works with service businesses, consultants, agencies, e-commerce brands and local businesses that want a clear, measurable growth strategy in the United States, Europe, Nigeria, South Africa and beyond."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What is included in your SEO services?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Our SEO services include a technical SEO audit, on-page optimization, keyword research, content recommendations, internal linking, schema markup and monthly reporting focused on sustainable, white-hat growth."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Do you manage social media content and engagement?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Yes. We plan content, write captions, post to major platforms and provide light community management while aligning social campaigns with your lead generation and sales goals."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Can you help us generate more leads and booked calls?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Lead generation is a core part of our offer. We combine SEO, paid search, paid social and conversion-focused landing pages plus follow-up systems to generate more qualified leads and booked calls."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "How do your pricing packages work?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "We offer four main packages—Essential, Growth, Professional and Enterprise—so startups and established brands can choose a level that matches their goals. Every package includes clear deliverables, transparent reporting and direct communication with our team."
-            }
-          }
-        ]
+        "@type": "Organization",
+        "name": "Vibes Digital Media",
+        "url": "https://www.vibesdigitalmedia.com/",
+        "logo": "https://www.vibesdigitalmedia.com/icons/android-chrome-512x512.png",
+        "sameAs": [
+          "https://www.linkedin.com/company/vibes-digital-media/"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "url": "https://www.vibesdigitalmedia.com/#/contact"
+        }
       }
       </script>
       
-
-    <!-- (Optional) You can add WebSite JSON-LD too later if you want -->
-    <!-- <script type="application/ld+json"> ... </script> -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.vibesdigitalmedia.com/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://www.vibesdigitalmedia.com/#/search?q={search_term_string}"
+          },
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
 
   <body class="bg-[#020817]">
